# chaotic-pg-userver

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml  docker.yaml  format.yml
benchs/: hello_benchmark.cpp
cmake/: CPM.cmake  deps.cmake
configs/: config_vars.docker.yaml  config_vars.testing.yaml  config_vars.yaml  static_config.yaml
scripts/: copy_so.sh
service/: main.cpp
src/: hello.cpp  hello.hpp
tests/: conftest.py  test_basic.py
